# utcn-fa

lab01/: direct_sort.cpp  main.cpp
lab02/: CMakeLists.txt
lab03/: CMakeLists.txt
lab2_custom/: CMakeLists.txt  heap.cpp  heap.h  main.cpp
lab3_custom/: CMakeLists.txt  quick_sort.cpp  quick_sort.h
lab4/: CMakeLists.txt  klists.cpp  klists.h  main.cpp
lab5/: CMakeLists.txt  hashtables.cpp  hashtables.h  main.cpp
lab6/: CMakeLists.txt  main.cpp  multiway.cpp  multiway.h
lab7/: CMakeLists.txt  dynamic.cpp  dynamic.h  main.cpp
lab8/: CMakeLists.txt  Explanations.md  disjoint.cpp  disjoint.h  main.cpp
